--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog with API</title>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script defer src="srt/js/main.js" type="module"></script>
 </head>
+
 <body>
     <section class='modal'>
 
@@ -12,8 +17,9 @@
     <section class='header'>
         <h1>Lorem Ipusum</h1>
     </section>
-    <section class='mian'>
+    <section class='main'>
 
     </section>
 </body>
+
 </html>
