--- a/index.html
+++ b/index.html
@@ -6,14 +6,23 @@
     <title>Blog with API</title>
 </head>
 <body>
-    <section class='modal'>
-
-    </section>
+    <section class='modal'></section>
     <section class='header'>
         <h1>Lorem Ipusum</h1>
     </section>
-    <section class='mian'>
-
+    <section class='main'>
+        <div class='posts'>
+            <article class='post'>
+                <div class='post--content'>
+                    <button value='id' class='post--content--title'>title</h3>
+                    <button value='id' class='post--content--body'>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla temporibus aliquid magnam, repellendus totam ratione vero esse necessitatibus tenetur! Voluptatibus nobis ea iste aperiam nihil perspiciatis, amet perferendis voluptate laboriosam!</button>
+                </div>
+                <div class='post--buttons'>
+                    <button value='id' class='post--buttons--edit'>edit</button>
+                    <button value='id' class='post--buttons--delete'>delete</button>
+                </div>
+             </article>
+        </div>
     </section>
 </body>
 </html>
