--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script defer src="srt/js/main.js" type="module"></script>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/main.css"
 </head>
 
 <body>
@@ -19,12 +24,12 @@
         <div class='posts'>
             <article class='post'>
                 <div class='post--content'>
-                    <button value='id' class='post--content--title'>title</h3>
+                    <button value='id' class='post--content--title'>Lorem Ipsum</h3>
                     <button value='id' class='post--content--body'>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla temporibus aliquid magnam, repellendus totam ratione vero esse necessitatibus tenetur! Voluptatibus nobis ea iste aperiam nihil perspiciatis, amet perferendis voluptate laboriosam!</button>
                 </div>
                 <div class='post--buttons'>
-                    <button value='id' class='post--buttons--edit'>edit</button>
-                    <button value='id' class='post--buttons--delete'>delete</button>
+                    <button value='id' class='post--buttons--edit material-icons'>edit</button>
+                    <button value='id' class='post--buttons--delete material-icons'>delete</button>
                 </div>
              </article>
         </div>
