--- a/index.html
+++ b/index.html
@@ -17,24 +17,28 @@
 </head>
 
 <body>
-    <section class='modal'></section>
-    <section class='header'>
-        <h1>Lorem Ipusum</h1>
-    </section>
-    <section class='main'>
-        <div class='posts'>
-            <article class='post'>
-                <div class='post--content'>
-                    <button value='id' class='post--content--title'>Lorem Ipsum</h3>
-                    <button value='id' class='post--content--body'>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla temporibus aliquid magnam, repellendus totam ratione vero esse necessitatibus tenetur! Voluptatibus nobis ea iste aperiam nihil perspiciatis, amet perferendis voluptate laboriosam!</button>
+    <main>
+        <section class='modal'></section>
+            <section class='header'>
+                <h1>Lorem Ipsum</h1>
+            </section>
+            <section class='main'>
+                <div class='posts'>
+                    <article class='post'>
+                        <div class='post--content'>
+                            <button value='id' class='post--content--title'>Lorem Ipsum</h3>
+                            <button value='id' class='post--content--body'>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla temporibus aliquid magnam, repellendus totam ratione vero esse necessitatibus tenetur! Voluptatibus nobis ea iste aperiam nihil perspiciatis, amet perferendis voluptate laboriosam!</button>
+                        </div>
+                        <div class='post--buttons'>
+                            <button value='id' class='post--buttons--edit material-icons'>edit</button>
+                            <button value='id' class='post--buttons--delete material-icons'>delete</button>
+                        </div>
+                    </article>
                 </div>
-                <div class='post--buttons'>
-                    <button value='id' class='post--buttons--edit material-icons'>edit</button>
-                    <button value='id' class='post--buttons--delete material-icons'>delete</button>
-                </div>
-             </article>
-        </div>
-    </section>
+            </section>
+
+    </main>
+    
 </body>
 
 </html>
