main page dessign

--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
         <section class='main'>
             <div class='posts'>
                 <article class='post'>
+                    <img src='https://picsum.photos/200/200?random=1'>
                     <div class='post--content'>
-                        <button value='id' class='post--content--title'>Lorem Ipsum</h3>
+                        <button value='id' class='post--content--title'>Lorem Ipsum</button>
                             <button value='id' class='post--content--body'>Lorem ipsum dolor sit amet consectetur
                                 adipisicing elit. Nulla temporibus aliquid magnam, repellendus totam ratione vero esse
                                 necessitatibus tenetur! Voluptatibus nobis ea iste aperiam nihil perspiciatis, amet
