--- a/index.html
+++ b/index.html
@@ -18,24 +18,10 @@
     <main>
         <section class='modal'></section>
         <section class='header'>
-            <h1>Lorem Ipsum</h1>
+            <h1 class='no-select'>Lorem Ipsum</h1>
         </section>
         <section class='main'>
             <div class='posts'>
-                <article class='post'>
-                    <img src='https://picsum.photos/200/200?random=1'>
-                    <div class='post--content'>
-                        <button value='id' class='post--content--title'>Lorem Ipsum</button>
-                            <button value='id' class='post--content--body'>Lorem ipsum dolor sit amet consectetur
-                                adipisicing elit. Nulla temporibus aliquid magnam, repellendus totam ratione vero esse
-                                necessitatibus tenetur! Voluptatibus nobis ea iste aperiam nihil perspiciatis, amet
-                                perferendis voluptate laboriosam!</button>
-                    </div>
-                    <div class='post--buttons'>
-                        <button value='id' class='post--buttons--edit material-icons'>edit</button>
-                        <button value='id' class='post--buttons--delete material-icons'>delete</button>
-                    </div>
-                </article>
             </div>
         </section>
 
