Adde buttonListeners for post user and images.

--- a/index.html
+++ b/index.html
@@ -16,11 +16,18 @@
 
 <body>
     <main>
-        <section class="modal">
-           <!-- <div class="modal--container">
+        <section class="header">
+            <h1>Lorem Ipsum</h1>
+        </section>
+        <section class="main">
+            <div id='posts--container' class="posts">
+            </div>
+        </section>
+        <section id="modal" class="modal none">
+            <div class="modal--container">
                 <button class="modal--buttons--close material-icons">close</button>
                 <article class="modal--post">
-                    <img src="https://dummyimage.com/300.png/09f/fff">
+                    <img id="modal--image" src="https://dummyimage.com/300.png/09f/fff">
                     <div>
                         <p class="modal--post--title">POST TITLE</p>
                         <p class="modal--user">User</p>
@@ -32,13 +39,6 @@
                     <p class="modal--comments--title">Comments</p>
                     <button class="modal--comments-load">Load comments</button>
                 </article>
-            </div>-->
-        </section>
-        <section class="header">
-            <h1>Lorem Ipsum</h1>
-        </section>
-        <section class="main">
-            <div id='posts--container' class="posts">
             </div>
         </section>
     </main>
