--- a/index.html
+++ b/index.html
@@ -28,16 +28,24 @@
                 <button class="modal--buttons--close material-icons">close</button>
                 <article class="modal--post">
                     <img id="modal--image" src="https://dummyimage.com/300.png/09f/fff">
-                    <div>
+                    <div class="modal--post--content">
                         <p class="modal--post--title">POST TITLE</p>
+                        <p class="modal--post--body">
+                            <!--lorem-->
+                            Urna id turpis. Nam posuere lectus vitae nibh. Etiam tortor orci, sagittis
+                            malesuada, rhoncus quis, hendrerit eget, libero.
+                            Quisque commodo nulla at nunc. Mauris consequat,
+                            enim.
+                            <!--/lorem-->
+
+                        </p>
                         <p class="modal--user">User</p>
                         <p class="modal--username">alex123</p>
                         <p class="modal--mail">alex@gmail.com</p>
                     </div>
                 </article>
                 <article class="modal--comments">
-                    <p class="modal--comments--title">Comments</p>
-                    <button class="modal--comments-load">Load comments</button>
+                    <button class="modal--comments-load">Comments</button>
                 </article>
             </div>
         </section>
