Added deleteButton and loading gif.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="modal--container">
                 <button class="modal--buttons--close material-icons">close</button>
                 <article class="modal--post">
-                    <img id="modal--image" src="https://dummyimage.com/300.png/09f/fff">
+                    <img id="modal--image" src="./srt/img/loading.gif">
                     <div class="modal--post--content">
                         <p class="modal--post--title">POST TITLE</p>
                         <p class="modal--post--body">
