--- a/index.html
+++ b/index.html
@@ -29,17 +29,9 @@
                 <article class="modal--post">
                     <img class="modal--image" id="modal--image" src="./srt/img/loading.gif">
                     <div class="modal--post--content">
-                        <p class="modal--post--title">POST TITLE</p>
-                        <p class="modal--post--body">
-                            <!--lorem-->
-                            Urna id turpis. Nam posuere lectus vitae nibh. Etiam tortor orci, sagittis
-                            malesuada, rhoncus quis, hendrerit eget, libero.
-                            Quisque commodo nulla at nunc. Mauris consequat,
-                            enim.
-                            <!--/lorem-->
-
-                        </p>
-                        <p class="modal--user">User</p>
+                        <input id="modal--title" class="modal--post--title" readonly></input>
+                        <textarea id="modal--body" class="modal--post--body" readonly>
+                        </textarea>
                         <p class="modal--username">alex123</p>
                         <p class="modal--mail">alex@gmail.com</p>
                     </div>
