--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
                 <button class="modal--buttons--close material-icons">close</button>
                 <article class="modal--post">
                     <img class="modal--image" id="modal--image" src="./srt/img/loading.gif">
-                    <div class="modal--post--content">
-                        <input id="modal--title" class="modal--post--title" readonly></input>
-                        <textarea id="modal--body" class="modal--post--body" readonly>
+                    <div id='modal-content' class="modal--post--content">
+                        <input id="modal--title" class="modal--post--title" wrap="hard" readonly>
+                        <textarea id="modal--body" class="modal--post--body" wrap="hard" readonly>
                         </textarea>
                         <p class="modal--username">alex123</p>
                         <p class="modal--mail">alex@gmail.com</p>
