--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </section>
         <section id="modal" class="modal none">
             <div class="modal--container">
-                <button class="modal--buttons--close material-icons">close</button>
+                <button class="modal--buttons--close material-icons clickable">close</button>
                 <article class="modal--post">
                     <img id="modal--image" src="./srt/img/loading.gif">
                     <div class="modal--post--content">
@@ -39,13 +39,13 @@
                             <!--/lorem-->
 
                         </p>
-                        <p class="modal--user">User</p>
                         <p class="modal--username">alex123</p>
                         <p class="modal--mail">alex@gmail.com</p>
                     </div>
                 </article>
                 <article class="modal--comments">
                     <button class="modal--comments-load">Comments</button>
+                    <div class="modal--comments--container"></div>
                 </article>
             </div>
         </section>
