Fixed errors after merge.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <article class="modal--post">
                     <img class="modal--image" id="modal--image" src="./srt/img/loading.gif">
                     <div id='modal-content' class="modal--post--content">
-                        <input id="modal--title" class="modal--post--title" wrap="hard" readonly>
+                        <textarea id="modal--title" class="modal--post--title" wrap="hard" readonly></textarea>
                         <textarea id="modal--body" class="modal--post--body" wrap="hard" readonly>
                         </textarea>
                         <p class="modal--username">alex123</p>
