--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <main>
-        <section class="header">
+        <section class="header no-select">
             <h1>Lorem Ipsum</h1>
         </section>
         <section class="main">
