--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                         <textarea id="modal--title" class="modal--post--title" wrap="hard" readonly></textarea>
                         <textarea id="modal--body" class="modal--post--body" wrap="hard" readonly>
                         </textarea>
+                        <button class='post--buttons--edit modal--buttons--edit material-icons'>edit</button>
                         <p class="modal--username">alex123</p>
                         <p class="modal--mail">alex@gmail.com</p>
                     </div>
