Now the load of the post comes from the clone.

--- a/index.html
+++ b/index.html
@@ -20,19 +20,23 @@
             <h1>Lorem Ipsum</h1>
         </section>
         <section class="main">
-            <div id='posts--container' class="posts">
-            </div>
+            <div id="posts--container" class="posts"></div>
         </section>
         <section id="modal" class="modal none">
             <div class="modal--container">
-                <button class="modal--buttons--close material-icons clickable">close</button>
+                <button class="modal--buttons--close material-icons clickable">
+                    close
+                </button>
                 <article class="modal--post">
-                    <img class="modal--image" id="modal--image" src="./srt/img/loading.gif">
-                    <div id='modal-content' class="modal--post--content">
-                        <textarea id="modal--title" class="modal--post--title" wrap="hard" readonly></textarea>
-                        <textarea id="modal--body" class="modal--post--body" wrap="hard" readonly>
-                        </textarea>
-                        <button class='post--buttons--edit modal--buttons--edit material-icons'>edit</button>
+                    <img class="modal--image" id="modal--image" src="./srt/img/loading.gif" />
+                    <div id="modal-content" class="modal--post--content">
+                        <textarea id="modal--title" class="modal--post--title" wrap="hard" spellcheck="false"
+                            readonly></textarea>
+                        <textarea id="modal--body" class="modal--post--body" wrap="hard" spellcheck="false" readonly>
+                            </textarea>
+                        <button class="post--buttons--edit modal--buttons--edit material-icons">
+                            edit
+                        </button>
                         <p class="modal--username">alex123</p>
                         <p class="modal--mail">alex@gmail.com</p>
                     </div>
