Post save on every input.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                             readonly></textarea>
                         <textarea id="modal--body" class="modal--post--body" wrap="hard" spellcheck="false" readonly>
                             </textarea>
-                        <button class="post--buttons--edit modal--buttons--edit material-icons">
+                        <button id="edit--on--post" class="post--buttons--edit modal--buttons--edit material-icons">
                             edit
                         </button>
                         <p class="modal--username">alex123</p>
