Comments are focused on load.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </article>
                 <article class="modal--comments">
                     <button class="modal--comments-load">Comments</button>
-                    <div class="modal--comments--container"></div>
+                    <div id="modal--comments" class="modal--comments--container"></div>
                 </article>
             </div>
         </section>
